# metaflow-prefect

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/metaflow_extensions/prefect/: __init__.py
src/metaflow_extensions/prefect/plugins/: mfextinit_prefect.py
src/metaflow_extensions/prefect/plugins/prefect/: __init__.py  _codegen.py  _graph.py  _types.py  exception.py  prefect_cli.py  prefect_decorator.py  prefect_flow.py
tests/: conftest.py  test_codegen.py  test_graph.py  test_prefect_decorator.py  test_prefect_flow.py  test_types.py
tests/flows/: branch_flow.py  decorator_flow.py  foreach_flow.py  param_flow.py  simple_flow.py
